# Kansoku

./: .gitignore  Dockerfile  PRD.md  README.md  TECHSTACK.md  app.py  docker-compose.yml  render-requirements.txt  render.yaml  requirements.txt
.github/workflows/: ci.yml
artifacts/: clusters.json  leaderboard.json  manifest.json  scaler.joblib  selected_features.json  signal_bundle.npz  significance.json
artifacts/models/: decision_tree.joblib  k-nearest_neighbors.joblib  kmeans.joblib  logistic_regression.joblib  mlp.keras  mlp_weights.npz  naive_bayes.joblib  random_forest.joblib
backend/: Dockerfile  pyproject.toml
backend/kansoku/: config.py  contracts.py  export_bundle.py
backend/kansoku/api/: artifacts.py  main.py
backend/kansoku/models/: cluster.py  export_mlp.py  train.py
backend/kansoku/signal/: dataset.py  features.py  pipeline.py  segment.py
backend/kansoku/stats/: run.py  validate.py
backend/tests/: test_api.py  test_signal.py  test_stats.py
data/processed/: features.parquet
deploy/: deploy_hf.sh
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  template.tsx
frontend/app/clusters/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/predict/: page.tsx
frontend/app/signals/: page.tsx
frontend/app/significance/: page.tsx
frontend/components/: Bearing3D.tsx  DotGrid.tsx  LiveTelemetry.tsx  MachineLanding.tsx  Nav.tsx  ScrollProgress.tsx  Teardown.tsx  Welcome.tsx  machine-landing.css  ui.tsx
frontend/lib/: api.ts
