[project]
name = "kansoku"
version = "1.0.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy", "scipy", "scikit-learn", "statsmodels", "PyWavelets",
    "pandas", "pyarrow", "requests", "tensorflow",
    "fastapi", "uvicorn[standard]", "pydantic", "joblib", "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[tool.setuptools.packages.find]
include = ["kansoku*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]
